# wallet-mcp

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  EXAMPLES.md  LICENSE  OPENCLAW.md  README.md  pyproject.toml  test_local.py
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
assets/: architecture.md
openclaw/: SKILL.md  wallet.py
src/wallet_mcp/: server.py
src/wallet_mcp/core/: distributor.py  evm.py  generator.py  importer.py  manager.py  solana.py  storage.py  utils.py
